# lg-atomese

./: CMakeLists.txt  README.md
.circleci/: config.yml
cmake/: CMakeLists.txt  LGAtomeseConfig.cmake.in
examples/: README.md  cross-space.scm  dict-lookup.scm  network-client.scm  network-server.scm  parse-disjuncts.scm  parse.scm  tools.scm
lib/: CMakeLists.txt  LGAtomeseConfig.cmake.in
opencog/: CMakeLists.txt
opencog/lg/: CMakeLists.txt  README.md
opencog/lg/cython/: CMakeLists.txt  README.md
opencog/lg/cython/opencog/: CMakeLists.txt  lg_types.pyx
opencog/lg/lg-conn/: CMakeLists.txt  LGConnExpand.cc  LGConnExpand.h
opencog/lg/lg-dict/: CMakeLists.txt  LGDictEntry.cc  LGDictEntry.h  LGDictExpContainer.cc  LGDictNode.cc  LGDictNode.h  LGDictReader.cc  LGDictSCM.cc  LGDictUtils.cc  README.md
opencog/lg/lg-parse/: CMakeLists.txt  LGParseLink.cc  LGParseLink.h  README.md
opencog/lg/scm/: CMakeLists.txt  lg-init.cc  lg.scm  nlp.scm
opencog/lg/scm/attic/: lg-parse-utils.scm
opencog/lg/types/: CMakeLists.txt  LGTypes.cc  NLPTypes.cc  atom_types.script
opencog/nlp/: CMakeLists.txt  README.md
opencog/nlp/cython/opencog/: CMakeLists.txt
opencog/nlp/lg-conn/: CMakeLists.txt  LGConnExpand.cc  LGConnExpand.h  lg-conn.scm
opencog/nlp/lg-dict/: CMakeLists.txt  LGDictEntry.cc  LGDictEntry.h  LGDictExpContainer.cc  LGDictNode.cc  LGDictReader.h  README.md  lg-dict.scm
opencog/nlp/lg-parse/: CMakeLists.txt  LGParseLink.cc  LGParseLink.h  README.md  lg-parse-utils.scm  lg-parse.scm
opencog/nlp/scm/: CMakeLists.txt  nlp-utils.scm  nlp.scm
opencog/nlp/scm/attic/: README.md  lg-dict-utils.scm  lg-dict.scm  nlp-utils.scm
opencog/nlp/types/: CMakeLists.txt  atom_types.script
tests/: CMakeLists.txt
tests/lg-conn/: CMakeLists.txt  lg-conn-expand-test.scm
tests/lg-dict/: CMakeLists.txt  lg-dict-entry-test.scm
tests/lg-parse/: CMakeLists.txt  lg-parse-disjunct-test.scm  test-disjuncts.scm
